[gd_scene load_steps=51 format=3 uid="uid://cep7q7cyxt51r"]

[ext_resource type="Script" uid="uid://bb7ypbbk53tu4" path="res://spearman.gd" id="1_5xrmj"]
[ext_resource type="Texture2D" uid="uid://c72n4730vojyg" path="res://assets/Units/Blue Units/Lancer/Lancer_DownRight_Attack.png" id="2_u37gh"]
[ext_resource type="Texture2D" uid="uid://dns4bakflh21x" path="res://assets/Units/Blue Units/Lancer/Lancer_Right_Attack.png" id="3_ceg2o"]
[ext_resource type="Texture2D" uid="uid://3htqejs4hln2" path="res://assets/Units/Blue Units/Lancer/Lancer_UpRight_Attack.png" id="4_2itus"]
[ext_resource type="Texture2D" uid="uid://bgobbrab80esy" path="res://assets/Units/Blue Units/Lancer/Lancer_Run.png" id="5_281kd"]
[ext_resource type="Texture2D" uid="uid://cf1gqypap1d82" path="res://assets/Units/Red Units/Lancer/Lancer_DownRight_Attack.png" id="6_281kd"]
[ext_resource type="Texture2D" uid="uid://on3xt8nk1trh" path="res://assets/Units/Red Units/Lancer/Lancer_Right_Attack.png" id="7_dbnw6"]
[ext_resource type="Texture2D" uid="uid://t188rc8nhcyx" path="res://assets/Units/Red Units/Lancer/Lancer_UpRight_Attack.png" id="8_02m10"]
[ext_resource type="Texture2D" uid="uid://b07lljytaallk" path="res://assets/Units/Red Units/Lancer/Lancer_Run.png" id="9_mmasm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dbnw6"]
radius = 19.0263

[sub_resource type="AtlasTexture" id="AtlasTexture_02m10"]
atlas = ExtResource("2_u37gh")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmasm"]
atlas = ExtResource("2_u37gh")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88q2"]
atlas = ExtResource("2_u37gh")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok1b5"]
atlas = ExtResource("3_ceg2o")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l4nf"]
atlas = ExtResource("3_ceg2o")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncmdo"]
atlas = ExtResource("3_ceg2o")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1mlr"]
atlas = ExtResource("4_2itus")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_1r37s"]
atlas = ExtResource("4_2itus")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_meldq"]
atlas = ExtResource("4_2itus")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a7xo"]
atlas = ExtResource("5_281kd")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_fys2n"]
atlas = ExtResource("5_281kd")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_niwdw"]
atlas = ExtResource("5_281kd")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ktty"]
atlas = ExtResource("5_281kd")
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_3m2mq"]
atlas = ExtResource("5_281kd")
region = Rect2(1280, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_0455g"]
atlas = ExtResource("5_281kd")
region = Rect2(1600, 0, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_l61fv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_02m10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmasm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88q2")
}],
"loop": false,
"name": &"attack_down_side",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok1b5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l4nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncmdo")
}],
"loop": false,
"name": &"attack_side",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1mlr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1r37s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meldq")
}],
"loop": false,
"name": &"attack_up_side",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a7xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fys2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niwdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ktty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3m2mq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0455g")
}],
"loop": true,
"name": &"move",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_l61fv"]
atlas = ExtResource("6_281kd")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_bufkk"]
atlas = ExtResource("6_281kd")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0yds"]
atlas = ExtResource("6_281kd")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlp3h"]
atlas = ExtResource("7_dbnw6")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_satrf"]
atlas = ExtResource("7_dbnw6")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_eed36"]
atlas = ExtResource("7_dbnw6")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmove"]
atlas = ExtResource("8_02m10")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7m2s"]
atlas = ExtResource("8_02m10")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfh8c"]
atlas = ExtResource("8_02m10")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_27b1n"]
atlas = ExtResource("9_mmasm")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sd88"]
atlas = ExtResource("9_mmasm")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_aetmp"]
atlas = ExtResource("9_mmasm")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2g87"]
atlas = ExtResource("9_mmasm")
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_imc6l"]
atlas = ExtResource("9_mmasm")
region = Rect2(1280, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqhti"]
atlas = ExtResource("9_mmasm")
region = Rect2(1600, 0, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_8h7j1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l61fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bufkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0yds")
}],
"loop": false,
"name": &"attack_down_side",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlp3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_satrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eed36")
}],
"loop": false,
"name": &"attack_side",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmove")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7m2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfh8c")
}],
"loop": false,
"name": &"attack_up_side",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27b1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sd88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aetmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2g87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imc6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqhti")
}],
"loop": true,
"name": &"move",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bufkk"]
radius = 34.0
height = 78.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_02m10"]
radius = 12.8642
height = 68.9218

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mmasm"]
radius = 12.8642
height = 68.9218

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n0yds"]
radius = 12.8642
height = 68.9218

[sub_resource type="CircleShape2D" id="CircleShape2D_mlp3h"]
radius = 240.008

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_satrf"]
radius = 22.0
height = 122.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_281kd"]
radius = 11.3137
height = 111.776

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dbnw6"]
radius = 9.18493
height = 115.985

[node name="Spearman" type="CharacterBody2D"]
script = ExtResource("1_5xrmj")

[node name="BodyCollider" type="CollisionShape2D" parent="."]
position = Vector2(-1, 22)
shape = SubResource("CircleShape2D_dbnw6")
debug_color = Color(0, 0.647416, 0.21166, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_l61fv")
animation = &"attack_down_side"

[node name="EnemyAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8h7j1")
animation = &"attack_up_side"

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(2, -4)
shape = SubResource("CapsuleShape2D_bufkk")

[node name="Hurtbox_up_side" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox_up_side"]
position = Vector2(56, -26)
rotation = 0.785398
scale = Vector2(1.71017, 2.00227)
shape = SubResource("CapsuleShape2D_02m10")
disabled = true
debug_color = Color(0.997585, 0, 0.162644, 0.42)

[node name="Hurtbox_down_side" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox_down_side"]
position = Vector2(39, 68)
rotation = 2.35619
scale = Vector2(1.71017, 2.00227)
shape = SubResource("CapsuleShape2D_mmasm")
disabled = true
debug_color = Color(0.997585, 0, 0.162644, 0.42)

[node name="Hurtbox_side" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox_side"]
position = Vector2(89, 11)
rotation = 1.5708
scale = Vector2(1.71017, 2.00227)
shape = SubResource("CapsuleShape2D_n0yds")
disabled = true
debug_color = Color(0.997585, 0, 0.162644, 0.42)

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2(75, 2)
shape = SubResource("CircleShape2D_mlp3h")

[node name="Enemy_in_range_side" type="Area2D" parent="."]
position = Vector2(-2, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_in_range_side"]
position = Vector2(90, 10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_satrf")

[node name="Enemy_in_range_down_side" type="Area2D" parent="."]
position = Vector2(-4, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_in_range_down_side"]
position = Vector2(49, 75)
rotation = 2.35619
shape = SubResource("CapsuleShape2D_281kd")

[node name="Enemy_in_range_up_side" type="Area2D" parent="."]
position = Vector2(88, 11)
rotation = 1.5708
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_in_range_up_side"]
position = Vector2(-42, 27)
rotation = 2.35969
shape = SubResource("CapsuleShape2D_dbnw6")

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 70
lifetime = 0.5
one_shot = true
explosiveness = 0.76
lifetime_randomness = 0.48
emission_shape = 1
emission_sphere_radius = 15.0
direction = Vector2(-0.3, -1)
initial_velocity_min = 201.1
initial_velocity_max = 330.23
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(0.745098, 0.2, 0.141176, 1)
hue_variation_max = 0.4

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="animation_finished" from="EnemyAnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="EnemyAnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="area_shape_entered" from="Hurtbox_up_side" to="." method="_on_hurtbox_area_shape_entered"]
[connection signal="area_shape_entered" from="Hurtbox_down_side" to="." method="_on_hurtbox_area_shape_entered"]
[connection signal="area_shape_entered" from="Hurtbox_side" to="." method="_on_hurtbox_area_shape_entered"]
